# thesis_files

./: README.md
dmp_inter/src/: CMakeLists.txt  package.xml
dmp_inter/src/apps/: execute_client.py  gui_buttons_list.py  learn_client_2.py  learn_client_2_r.py  learn_client_multiple.py  learn_client_multiple_dual.py  marker_publisher.py  tf_target_left.py  tf_trimmer.py
dmp_inter/src/src/: dmp_main.py
dmp_inter/src/srv/: DMPLoad.srv
dual_arm_controller/for_simulation/: CMakeLists.txt  cartesian_impedance_example_controller_3.cpp  cartesian_impedance_example_controller_3.h  cartesian_impedance_example_controller_3_l.cpp  cartesian_impedance_example_controller_3_l.h
dual_arm_controller/src/examples/: CMakeLists.txt  package.xml
dual_arm_controller/src/examples/install/adaptive_cartesian/adaptive_cartesian/: adaptive_cartesian_wrapper.hpp
dual_arm_controller/src/examples/install/adaptive_cartesian/cmake/: adaptive_cartesianConfig.cmake  adaptive_cartesianTargets-release.cmake  adaptive_cartesianTargets.cmake
dual_arm_controller/src/examples/install/cartesian/cartesian/: cartesian_wrapper.hpp
dual_arm_controller/src/examples/install/cartesian/cmake/: cartesianConfig.cmake  cartesianTargets-release.cmake  cartesianTargets.cmake
dual_arm_controller/src/examples/install/cartesian_dual/cartesian_dual/: cartesian_dual_wrapper.hpp
dual_arm_controller/src/examples/install/cartesian_dual/cmake/: cartesian_dualConfig.cmake  cartesian_dualTargets-release.cmake  cartesian_dualTargets.cmake
dual_arm_controller/src/examples/install/cntr_aic/cmake/: cntr_aicConfig.cmake  cntr_aicTargets-release.cmake  cntr_aicTargets.cmake
dual_arm_controller/src/examples/install/cntr_aic/cntr_aic/: cntr_aic_wrapper.hpp
dual_arm_controller/src/examples/install/cntr_joint_imp/cmake/: cntr_joint_impConfig.cmake  cntr_joint_impTargets-release.cmake  cntr_joint_impTargets.cmake
dual_arm_controller/src/examples/install/cntr_joint_imp/cntr_joint_imp/: cntr_joint_imp_wrapper.hpp
dual_arm_controller/src/examples/install/conv_vel2pose/cmake/: conv_vel2poseConfig.cmake  conv_vel2poseTargets-release.cmake  conv_vel2poseTargets.cmake
dual_arm_controller/src/examples/install/conv_vel2pose/conv_vel2pose/: conv_vel2pose_wrapper.hpp
dual_arm_controller/src/examples/install/dual_arm_adaptive_cartesian/cmake/: dual_arm_adaptive_cartesianConfig.cmake  dual_arm_adaptive_cartesianTargets-release.cmake  dual_arm_adaptive_cartesianTargets.cmake
dual_arm_controller/src/examples/install/dual_arm_adaptive_cartesian/dual_arm_adaptive_cartesian/: dual_arm_adaptive_cartesian_wrapper.hpp
dual_arm_controller/src/examples/install/dual_arm_sync/cmake/: dual_arm_syncConfig.cmake  dual_arm_syncConfigVersion.cmake  dual_arm_syncTargets-release.cmake  dual_arm_syncTargets.cmake
dual_arm_controller/src/examples/install/dual_arm_sync/dual_arm_sync/: dual_arm_sync_wrapper.hpp
dual_arm_controller/src/examples/install/mogen_p2p_joint/cmake/: mogen_p2p_jointConfig.cmake  mogen_p2p_jointTargets-release.cmake  mogen_p2p_jointTargets.cmake
dual_arm_controller/src/examples/install/mogen_p2p_joint/mogen_p2p_joint/: mogen_p2p_joint_wrapper.hpp
dual_arm_controller/src/examples/src/: EE_pose.cpp  dual_arm_controller.cpp  joint_impedance_controller.cpp
dual_arm_controller/src/examples/src/include/: pseudo_inversion.h
motion_mapping/ws/src/motion_mapping/: CMakeLists.txt  README.md  bvh-parser.h  bvh-parser_2.h  bvh.h  convert_joints_file.cpp  convert_joints_tcp.cpp  cppserverConfig.cmake  franka_ik_He.hpp  hands_tf.cpp  hands_tf_vive.cpp  hands_tf_vive_left.cpp  hands_tf_vive_right.cpp  hands_tf_vive_target.cpp  inv_panda.cpp  joint.h  kinematics.cpp  package.xml  panda_kinematics.cpp  pn_inv.cpp  pn_tf.cpp  rotation_values copy.txt  rotation_values.txt  tcp_test_client.cpp  tf_origin.cpp  tf_origin_hand.cpp  utils.h
motion_mapping/ws/src/motion_mapping/include/: geometry.h  kinematics.h  panda_kinematics.h  types.h
robot_bringup/src/robots/robots_bringup/: CMakeLists.txt  package.xml
robot_bringup/src/robots/robots_bringup/launch/: UR10_bringup.launch  panda_bringup.launch  panda_dual.launch
robot_bringup/src/robots/robots_bringup/launch/rviz_config/: panda.rviz  ur10.rviz
robot_bringup/src/robots/robots_description/: CMakeLists.txt  package.xml
robot_bringup/src/robots/robots_description/robots/common/: franka_arm.xacro  franka_hand.xacro  franka_robot.xacro  hand.urdf.xacro  utils.xacro
robot_bringup/src/robots/robots_description/robots/dual_panda/: dual_panda_example.urdf.xacro
robot_bringup/src/robots/robots_description/robots/fr3/: fr3.urdf.xacro
robot_bringup/src/robots/robots_description/robots/panda/: panda.urdf.xacro
robot_bringup/src/robots/robots_description/urdf/: panda_arm.urdf  panda_arm.urdf.xacro  panda_arm_hand.urdf  panda_arm_hand.urdf.xacro  ur10_robot.urdf
