<package>
  <name>simulink_pipeline</name>
  <version>1.0.0</version>
  <description>Simulink Pipeline Examples</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>MIT</license> <!-- Add the license tag with your chosen license -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>Franka</build_depend>
  <build_depend>Eigen3</build_depend>
    <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>Franka</run_depend>
  <run_depend>Eigen3</run_depend>

    <run_depend>geometry_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>

