<?xml version="1.0"?>
<package format="2">
  <name>motion_mapping</name>
  <version>1.0.0</version>
  <description>A package for motion mapping</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>MIT</license> <!-- Add your desired license type here -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <!-- Add any package exports here -->
  </export>
</package>
